<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/onePlayer"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/onePlayerTextSize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/modeOnePlayermarginLinerLayout"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/select_the_difficulty_level"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView1"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    android:text="@string/mode_easy" />

                <RadioButton
                    android:id="@+id/radio_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    android:text="@string/mode_middle"/>

                <RadioButton
                    android:id="@+id/radio_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp"
                    android:checked="true"
                    android:text="@string/mode_hard"/>
            </RadioGroup>

            <Button
                android:id="@+id/play"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/radioGroup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTopBtnPlay"
                android:background="@drawable/menu_button"
                android:text="@string/play"
                android:textAllCaps="false"
                android:textSize="30sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>

