<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Rules"
    tools:showIn="@layout/activity_rules">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_rules"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:background="@drawable/rules" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:text="@string/rules_of_game1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/pentago_picture_rules1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:text="@string/rules_of_game2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="@drawable/pentago_picture_rules2"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:text="@string/rules_of_game3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:text="@string/rules_of_game4" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>