<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_rules" />

    <TextView
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/alert_question"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_alignBottom="@id/bg"
        android:layout_toStartOf="@+id/yes"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/bg"
        android:layout_alignEnd="@id/bg"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/yes"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="30sp" />

</RelativeLayout>


